# unicorn

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README.md  UnicornConfig.cmake.in  amalgamate.pyz  autogen.sh  configure.ac  features.json  generate.pyz  misra-compliance.html  unicorn.pc.in
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml
checks/: check_linking.c  check_misra_compliance.sh
config/: __main__.py  binary_properties.py  ccc.py  compression.py  config.py  decomposition.py  feature.py  general_category.py  segmentation.py  tools.py
examples/: .gitignore  CMakeLists.txt  Makefile.am  case_convert.c  case_fold.c  character_properties.c  collate_text.c  compare_text.c  compress_text.c  decode_utf16.c  decode_utf32.c  decode_utf8.c  encode_character.c  segment_text.c
include/: Makefile.am  unicorn.h
man/: CMakeLists.txt  Makefile  Makefile.am  uni_big.3  uni_caseconv.3  uni_caseconvchk.3  uni_casefold.3  uni_casefoldchk.3  uni_casefoldcmp.3  uni_ccc.3  uni_collate.3  uni_compress.3  uni_convert.3  uni_decompress.3  uni_encode.3  uni_gc.3  uni_getucdversion.3  uni_getversion.3  uni_is.3  uni_little.3  uni_native.3  uni_next.3  uni_nextbrk.3  uni_norm.3  uni_normchk.3  uni_normcmp.3  uni_normqchk.3  uni_nulify.3  uni_numval.3  uni_prev.3  uni_prevbrk.3  uni_scalar.3  uni_seterrfunc.3  uni_setmemfunc.3  uni_sortkeycmp.3  uni_sortkeymk.3  uni_tolower.3  uni_totitle.3  uni_toupper.3  uni_trust.3  (+20 more)
scripts/: Makefile.am  __main__.py  basics.py  binary_properties.py  case_conversion.py  case_folding.py  ccc.py  collation.py  composition.py  compression.py  config.py  decomposition.py  encoding.py  feature.py  general_category.py  numeric_value.py  quickcheck.py  segmentation.py  simple_case_mappings.py  tools.py  version.py
src/: CMakeLists.txt  Makefile.am  buffer.c  buffer.h  byteswap.h  caseconv.c  casefold.c  charbuf.c  charbuf.h  charvec.c  charvec.h  collation.c  common.h  compression.c  ducet.c  ducet.h  encoding.c  logger.c  memory.c  normalize.c  normalize.h  properties.c  segmentation.c  unicorn.c
tests/: CMakeLists.txt  README.md  check_linking.c  check_misra_compliance.sh  suppressions.txt  tests.c
