man3_MANS = \
	uninormform.3 \
	unisize.3 \
	uni_validate.3 \
	uni_ccc.3 \
	uni_seterrfunc.3 \
	uni_casefoldchk.3 \
	uni_caseconv.3 \
	uni_nextbrk.3 \
	uni_setmemfunc.3 \
	uni_native.3 \
	uni_totitle.3 \
	uni_collate.3 \
	uni_decompress.3 \
	uni_big.3 \
	unicorn.3 \
	uni_prev.3 \
	uni_numval.3 \
	unigc.3 \
	uni_utf8.3 \
	uni_norm.3 \
	unierrfunc.3 \
	uni_sortkeycmp.3 \
	uni_toupper.3 \
	uni_utf16.3 \
	uniattr.3 \
	unicasefold.3 \
	unibreak.3 \
	uni_normcmp.3 \
	uni_normqchk.3 \
	uni_prevbrk.3 \
	uni_trust.3 \
	uni_is.3 \
	uni_getversion.3 \
	uni_gc.3 \
	uninormchk.3 \
	uni_convert.3 \
	uni_normchk.3 \
	unichar.3 \
	uni_sortkeymk.3 \
	uni_casefold.3 \
	unistat.3 \
	uni_little.3 \
	uni_scalar.3 \
	uni_compress.3 \
	uni_tolower.3 \
	unistrength.3 \
	uni_next.3 \
	uni_nulify.3 \
	unicaseconv.3 \
	uniweighting.3 \
	uni_getucdversion.3 \
	unibp.3 \
	unimemfunc.3 \
	uni_caseconvchk.3 \
	uni_utf32.3 \
	uni_encode.3 \
	uni_casefoldcmp.3
EXTRA_DIST = CMakeLists.txt $(man3_MANS)
